# tweesent-back

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.json  example.py  main.py  pyproject.toml  requirements.txt  server.py
config/: config.json
docker/: Dockerfile  entrypoint.sh
models/: sentiment.py  tweets.py
routes/: home.py  predict.py  stream.py  tweet.py
scripts/: build.sh  run.sh
tools/: models.py  settings.py  utils.py
