[tool.poetry]
name = "tweesent-back"
version = "0.1.0"
description = ""
authors = ["Rene Presedo <presedo93@gmail.com>"]
readme = "README.md"
packages = [{include = "tweesent_back"}]

[tool.poetry.dependencies]
python = "^3.9"
# onnxruntime-gpu = "^1.11.1"
fastapi = "^0.78.0"
transformers = "^4.20.1"
emoji = "^1.7.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
tweepy = {extras = ["async"], version = "^4.10.0"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
